Update Week 05 HW.ipynb

--- a/week5/Week 05 HW.ipynb
+++ b/week5/Week 05 HW.ipynb
@@ -317,7 +317,10 @@
     "id": "D53KC3ngfmNo"
    },
    "source": [
-    "Insert comments here"
+    "Insert comments here\n",
+    "\n",
+    "No, there is no concerns regarding the class imbalances as there is no such big difference between the distributions of classes \n",
+    "in 'left_company' column.We can observe equal distribution for both 'yes' and 'no'."
    ]
   },
   {
@@ -382,7 +385,7 @@
    "outputs": [],
    "source": [
     "# numerical_vars = []\n",
-    "df_numerical_vars = df.select_dtypes(include='number')\n",
+    "df_numerical_vars = df.select_dtypes(include='int64')\n",
     "\n",
     "# categorical_vars = []\n",
     "df_categorical_vars = df.select_dtypes(include='object')"
@@ -796,12 +799,238 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>VIF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>age</td>\n",
+       "      <td>27.168360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>commuting_distance</td>\n",
+       "      <td>2.433846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>education</td>\n",
+       "      <td>8.740078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>satisfaction_with_environment</td>\n",
+       "      <td>6.173071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>seniority_level</td>\n",
+       "      <td>10.701452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>satisfaction_with_job</td>\n",
+       "      <td>6.347144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>last_raise_pct</td>\n",
+       "      <td>39.030498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>last_performance_rating</td>\n",
+       "      <td>74.177763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>total_years_working</td>\n",
+       "      <td>11.666810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>years_at_company</td>\n",
+       "      <td>9.740221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>years_in_current_job</td>\n",
+       "      <td>7.702389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>years_since_last_promotion</td>\n",
+       "      <td>2.606726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>years_with_current_supervisor</td>\n",
+       "      <td>6.956557</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          feature        VIF\n",
+       "0                             age  27.168360\n",
+       "1              commuting_distance   2.433846\n",
+       "2                       education   8.740078\n",
+       "3   satisfaction_with_environment   6.173071\n",
+       "4                 seniority_level  10.701452\n",
+       "5           satisfaction_with_job   6.347144\n",
+       "6                  last_raise_pct  39.030498\n",
+       "7         last_performance_rating  74.177763\n",
+       "8             total_years_working  11.666810\n",
+       "9                years_at_company   9.740221\n",
+       "10           years_in_current_job   7.702389\n",
+       "11     years_since_last_promotion   2.606726\n",
+       "12  years_with_current_supervisor   6.956557"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vif_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>VIF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>commuting_distance</td>\n",
+       "      <td>2.433846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>education</td>\n",
+       "      <td>8.740078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>satisfaction_with_environment</td>\n",
+       "      <td>6.173071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>satisfaction_with_job</td>\n",
+       "      <td>6.347144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>years_at_company</td>\n",
+       "      <td>9.740221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>years_in_current_job</td>\n",
+       "      <td>7.702389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>years_since_last_promotion</td>\n",
+       "      <td>2.606726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>years_with_current_supervisor</td>\n",
+       "      <td>6.956557</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          feature       VIF\n",
+       "1              commuting_distance  2.433846\n",
+       "2                       education  8.740078\n",
+       "3   satisfaction_with_environment  6.173071\n",
+       "5           satisfaction_with_job  6.347144\n",
+       "9                years_at_company  9.740221\n",
+       "10           years_in_current_job  7.702389\n",
+       "11     years_since_last_promotion  2.606726\n",
+       "12  years_with_current_supervisor  6.956557"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Removed the variables which has high collinearity that is greater  than 10\n",
+    "temp_vif=vif_df[vif_df[\"VIF\"]<10]\n",
+    "temp_vif"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Ba_mxVu4fmNr"
    },
    "source": [
-    "Insert comments here"
+    "Insert comments here\n",
+    "\n",
+    "A statistical technique called the variance inflation factor (VIF) can detect and measure the amount of collinearity in a multiple regression model. VIF measures how much the variance of the estimated regression coefficients is inflated as compared to when the predictor variables are not linearly related. A VIF of 1 will mean that the variables are not correlated; a VIF between 1 and 5 shows that variables are moderately correlated, and a VIF between 5 and 10 will mean that variables are highly correlated."
    ]
   },
   {
@@ -817,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "id": "3orwGOVVfmNr"
    },
@@ -845,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1437,7 @@
        "[800 rows x 18 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1468,7 @@
        "Name: left_company, Length: 800, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "id": "rlWfJKCgfmNs"
    },
@@ -1308,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "id": "2pNfAEGffmNs"
    },
@@ -1324,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
