--- a/Midterm/MidProject__602.ipynb
+++ b/Midterm/MidProject__602.ipynb
@@ -51,10 +51,206 @@
    "execution_count": 3,
    "id": "25c03c8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>title</th>\n",
+       "      <th>body</th>\n",
+       "      <th>signature</th>\n",
+       "      <th>submissiontime</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Mrs. Laurence Class</td>\n",
+       "      <td>Because of the upcoming holiday, we will be re...</td>\n",
+       "      <td>Jaslynn Laurence</td>\n",
+       "      <td>11/18/15 9:26 AM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Mr. Valle's Winter Break Packets (Cornell/Hamp...</td>\n",
+       "      <td>All my Cornell, Hampton, and Princeton student...</td>\n",
+       "      <td>Mr. Sam Valle</td>\n",
+       "      <td>12/16/15 9:26 PM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Hours of Operation</td>\n",
+       "      <td>Parents/Guardians,    We will gladly assist yo...</td>\n",
+       "      <td>Ms. Ellis</td>\n",
+       "      <td>11/18/15 3:30 PM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Character Education</td>\n",
+       "      <td>CMIT South scholars will continue to work on v...</td>\n",
+       "      <td>Ch.Ed. Team  Room 163</td>\n",
+       "      <td>11/15/15 4:49 PM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CMIT Students Connecting with Students Around ...</td>\n",
+       "      <td>A couple of classes have had the opportunity t...</td>\n",
+       "      <td>Srta. Dickerson</td>\n",
+       "      <td>11/16/15 5:21 AM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19602</th>\n",
+       "      <td>19602</td>\n",
+       "      <td>Ms. Coholic's Science Classes</td>\n",
+       "      <td>Hello all!  This week, BioGeoChem students wil...</td>\n",
+       "      <td>Suzanne Coholic High School Science Teacher  S...</td>\n",
+       "      <td>1/11/23 10:28 AM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19603</th>\n",
+       "      <td>19603</td>\n",
+       "      <td>AP Exams</td>\n",
+       "      <td>Clock is ticking and we have four months until...</td>\n",
+       "      <td>Nabil Siddiqui</td>\n",
+       "      <td>1/13/23 9:43 AM</td>\n",
+       "      <td>ANNOUNCEMENTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19604</th>\n",
+       "      <td>19604</td>\n",
+       "      <td>Ever thought of becoming a Software Engineer?</td>\n",
+       "      <td>This after school club can benefit all the com...</td>\n",
+       "      <td>Nabil Siddiqui</td>\n",
+       "      <td>1/13/23 9:49 AM</td>\n",
+       "      <td>CLUBS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19605</th>\n",
+       "      <td>19605</td>\n",
+       "      <td>Last Call! Women's Lacrosse Interest</td>\n",
+       "      <td>Last Call! The Women's Lacrosse Program is hav...</td>\n",
+       "      <td>Serey Sok CMIT Women's Lacrosse &amp; Women's Socc...</td>\n",
+       "      <td>1/15/23 8:29 PM</td>\n",
+       "      <td>CLUBS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19606</th>\n",
+       "      <td>19606</td>\n",
+       "      <td>Clarinetists, Flautist, Violinist, Violists, ...</td>\n",
+       "      <td>ORCHESTRA/CONCERT CLUB   We are doing a mid ye...</td>\n",
+       "      <td>Russell Carter</td>\n",
+       "      <td>2/6/23 12:54 PM</td>\n",
+       "      <td>CLUBS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19607 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0                                              title  \\\n",
+       "0               0                                Mrs. Laurence Class   \n",
+       "1               1  Mr. Valle's Winter Break Packets (Cornell/Hamp...   \n",
+       "2               2                                 Hours of Operation   \n",
+       "3               3                                Character Education   \n",
+       "4               4  CMIT Students Connecting with Students Around ...   \n",
+       "...           ...                                                ...   \n",
+       "19602       19602                      Ms. Coholic's Science Classes   \n",
+       "19603       19603                                          AP Exams    \n",
+       "19604       19604      Ever thought of becoming a Software Engineer?   \n",
+       "19605       19605               Last Call! Women's Lacrosse Interest   \n",
+       "19606       19606   Clarinetists, Flautist, Violinist, Violists, ...   \n",
+       "\n",
+       "                                                    body  \\\n",
+       "0      Because of the upcoming holiday, we will be re...   \n",
+       "1      All my Cornell, Hampton, and Princeton student...   \n",
+       "2      Parents/Guardians,    We will gladly assist yo...   \n",
+       "3      CMIT South scholars will continue to work on v...   \n",
+       "4      A couple of classes have had the opportunity t...   \n",
+       "...                                                  ...   \n",
+       "19602  Hello all!  This week, BioGeoChem students wil...   \n",
+       "19603  Clock is ticking and we have four months until...   \n",
+       "19604  This after school club can benefit all the com...   \n",
+       "19605  Last Call! The Women's Lacrosse Program is hav...   \n",
+       "19606  ORCHESTRA/CONCERT CLUB   We are doing a mid ye...   \n",
+       "\n",
+       "                                               signature    submissiontime  \\\n",
+       "0                                       Jaslynn Laurence  11/18/15 9:26 AM   \n",
+       "1                                          Mr. Sam Valle  12/16/15 9:26 PM   \n",
+       "2                                              Ms. Ellis  11/18/15 3:30 PM   \n",
+       "3                                  Ch.Ed. Team  Room 163  11/15/15 4:49 PM   \n",
+       "4                                        Srta. Dickerson  11/16/15 5:21 AM   \n",
+       "...                                                  ...               ...   \n",
+       "19602  Suzanne Coholic High School Science Teacher  S...  1/11/23 10:28 AM   \n",
+       "19603                                     Nabil Siddiqui   1/13/23 9:43 AM   \n",
+       "19604                                     Nabil Siddiqui   1/13/23 9:49 AM   \n",
+       "19605  Serey Sok CMIT Women's Lacrosse & Women's Socc...   1/15/23 8:29 PM   \n",
+       "19606                                     Russell Carter   2/6/23 12:54 PM   \n",
+       "\n",
+       "            category  \n",
+       "0      ANNOUNCEMENTS  \n",
+       "1      ANNOUNCEMENTS  \n",
+       "2      ANNOUNCEMENTS  \n",
+       "3      ANNOUNCEMENTS  \n",
+       "4      ANNOUNCEMENTS  \n",
+       "...              ...  \n",
+       "19602  ANNOUNCEMENTS  \n",
+       "19603  ANNOUNCEMENTS  \n",
+       "19604          CLUBS  \n",
+       "19605          CLUBS  \n",
+       "19606          CLUBS  \n",
+       "\n",
+       "[19607 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Reading the Dataset\n",
-    "df = pd.read_csv(\"dataset_newsletter.csv\")"
+    "df = pd.read_csv(r\"C:\\Users\\lavan\\Downloads\\dataset_newsletter.csv\",sep=',') \n",
+    "df"
    ]
   },
   {
@@ -2994,7 +3190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
